--- a/www/langs/custom.id.json
+++ b/www/langs/custom.id.json
@@ -1,167 +1,189 @@
 {
-  "tr-custom-packages": "Paket Terinstal",
-  "tr-custom-defaults": "Skrip untuk dijalankan saat boot pertama (uci-defaults)",
-  "tr-postinst": "Postinst (Skrip instalasi paket)",
-  "tr-uci": "UCI-defaults (Skrip konfigurasi boot)",
-  "tr-package-search": "Pencarian Paket",
-  "tr-add-commands": "Tambah perintah",
-  "tr-base-size": "Dasar",
-  "tr-added-size": "Ditambahkan",
-  "tr-total-size": "Total",
-  "tr-package-size-snapshot-unavailable": "※ Informasi ukuran paket tidak tersedia untuk versi SNAPSHOT",
-  "tr-package-size-note": "※ Tidak termasuk paket bahasa dan dependensi",
-  "tr-uci-size-limit": "※ Batas ukuran file: 20480 bytes: 20.00 KB",
-  "tr-import-settings": "Impor",
-  "tr-export-settings": "Ekspor",
-  "tr-asu-status-checking": "Memeriksa...",
-  "tr-asu-status-online": "Online",
-  "tr-asu-status-offline": "Offline",
-  "tr-asu-status-error": "Kesalahan",
-  "tr-asu-status-200": "Server ASU dapat diakses. Status: {status}",
-  "tr-asu-status-500": "Server ASU merespons dengan kesalahan internal. Status: {status}",
-  "tr-asu-status-unreachable": "Server ASU merespons dengan status yang tidak terduga. Status: {status}",
-  "tr-asu-status-networkfail": "Gagal mencapai server ASU: {error}",
-  "tr-extended-info": "Informasi Wilayah & ISP",
-  "tr-loading": "Memuat…",
-  "tr-notice": "Pemberitahuan",
-  "tr-country": "Area",
-  "tr-timezone": "Zona Waktu",
-  "tr-zonename": "Nama Zona",
-  "tr-isp": "ISP",
-  "tr-as": "Nomor AS",
-  "tr-ip-address": "Alamat",
-  "tr-method": "Jenis Koneksi",
-  "tr-basic-configuration": "Konfigurasi Dasar",
-  "tr-language": "Bahasa",
-  "tr-device-name": "Nama Perangkat",
-  "tr-root-password": "Kata Sandi Root",
-  "tr-lan-ipv4-address": "Alamat IPv4 LAN",
-  "tr-lan-ipv6-address": "Alamat IPv6 LAN",
-  "tr-ssh-interface": "Antarmuka SSH",
-  "tr-ssh-port": "Port SSH",
-  "tr-lan-dhcp-start": "Awal DHCP",
-  "tr-lan-dhcp-limit": "Batas DHCP",
-  "tr-lan-dhcp-lease-time": "Waktu Sewa DHCP",
-  "tr-wifi-configuration": "Konfigurasi Wi-Fi",
-  "tr-wifi-disabled": "Wi-Fi Dinonaktifkan",
-  "tr-wifi-enabled": "Wi-Fi Diaktifkan",
-  "tr-wifi-radio0": "Band 2.4GHz",
-  "tr-wifi-radio1": "Band 5GHz",
-  "tr-ssid-2ghz": "SSID (2.4GHz)",
-  "tr-ssid-5ghz": "SSID (5GHz)",
-  "tr-password-2ghz": "Kata Sandi (2.4GHz)",
-  "tr-password-5ghz": "Kata Sandi (5GHz)",
-  "tr-encryption": "Enkripsi",
-  "tr-wifi-country-code": "Kode Negara",
-  "tr-wifi-advanced": "Pengaturan Wi-Fi Lanjutan",
-  "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "Perlindungan Frame Manajemen 802.11w",
-  "tr-80211w-disabled": "Dinonaktifkan",
-  "tr-80211w-optional": "Opsional",
-  "tr-80211w-required": "Diperlukan",
-  "tr-internet-connection": "Koneksi Internet",
-  "tr-manual-setting": "Pengaturan Manual",
-  "tr-manual-setting-warning": "Mode pengaturan manual: Deteksi otomatis dinonaktifkan. Silakan konfigurasikan secara manual.",
-  "tr-auto": "Otomatis",
-  "tr-auto-detection": "Deteksi Otomatis",
-  "tr-dhcp": "DHCP",
-  "tr-pppoe": "PPPoE",
-  "tr-dslite": "DS-Lite",
-  "tr-mape": "MAP-E",
-  "tr-ap-mode": "Mode Access Point",
-  "tr-pppoe-username": "Nama Pengguna",
-  "tr-pppoe-password": "Kata Sandi",
-  "tr-dslite-aftr": "Alamat AFTR",
-  "tr-mape-settings": "Pengaturan MAP-E",
-  "tr-mape-ipv4addr": "Alamat IPv4",
-  "tr-mape-ip6prefix": "Prefiks IPv6",
-  "tr-mape-peeraddr": "Alamat Peer",
-  "tr-mape-psidlen": "Panjang PSID",
-  "tr-mape-psid": "PSID",
-  "tr-mape-offset": "Offset",
-  "tr-ap-dhcp-enabled": "DHCP Diaktifkan",
-  "tr-ap-gateway": "Gateway",
-  "tr-tuning": "Penyetelan",
-  "tr-netopt-optimization": "Optimasi Jaringan Dinamis",
-  "tr-netopt-optimization-disabled": "Optimasi Dinonaktifkan",
-  "tr-manual": "Manual",
-  "tr-auto-mode": "Mode Otomatis",
-  "tr-auto-optimization": "Optimasi Otomatis",
-  "tr-manual-mode": "Mode Manual",
-  "tr-manual-settings": "Pengaturan Manual",
-  "tr-tcp-read-memory": "Memori Baca TCP",
-  "tr-tcp-write-memory": "Memori Tulis TCP",
-  "tr-connection-tracking-max": "Pelacakan Koneksi Maksimal",
-  "tr-network-device-backlog": "Backlog Perangkat Jaringan",
-  "tr-socket-max-connections": "Koneksi Socket Maksimal",
-  "tr-tcp-congestion-control": "Kontrol Kemacetan TCP",
-  "tr-cubic-default": "cubic (default)",
-  "tr-bbr": "BBR",
-  "tr-reno": "Reno",
-  "tr-disabled-mode": "Mode Dinonaktifkan",
-  "tr-basic-system-features": "Fitur Sistem Dasar",
-  "tr-system-management": "Manajemen Sistem",
-  "tr-network-management": "Manajemen Jaringan",
-  "tr-wifi-management": "Manajemen Wi-Fi",
-  "tr-modem-support": "Dukungan Modem",
-  "tr-security-tools": "Alat Keamanan",
-  "tr-system-monitoring": "Pemantauan Sistem",
-  "tr-diagnostic-tools": "Alat Diagnostik Jaringan",
-  "tr-system-tools": "Alat Administrasi Sistem",
-  "tr-themes-dashboard": "Tema dan Dashboard",
-  "tr-utilities": "Utilitas",
-  "tr-usb-storage": "Dukungan Penyimpanan USB",
-  "tr-file-sharing": "Berbagi File",
-  "tr-dns-privacy": "DNS & Privasi",
-  "tr-dnsmasq-settings": "Optimasi Server DNS",
-  "tr-dnsmasq-mode": "Mode Server DNS",
-  "tr-dnsmasq-auto": "Otomatis",
-  "tr-dnsmasq-manual": "Manual",
-  "tr-dnsmasq-disabled": "Dinonaktifkan",
-  "tr-dnsmasq-cache": "Ukuran Cache",
-  "tr-dnsmasq-negcache": "Cache Negatif",
-  "tr-dnsmasq-auto-optimization": "Optimasi Otomatis",
-  "tr-dnsmasq-optimization-disabled": "Optimasi Dinonaktifkan",
-  "tr-feedback-link": "Forum",
+    "tr-custom-packages": "Paket Terinstal",
+    "tr-custom-defaults": "Skrip yang dijalankan saat boot pertama (uci-defaults)",
+    "tr-postinst": "Postinst (Skrip Instalasi Paket)",
+    "tr-uci": "UCI-defaults (Skrip Konfigurasi Boot)",
+    "tr-package-search": "Pencarian Paket",
+    "tr-add-commands": "Tambah Perintah",
+    "tr-base-size": "Dasar",
+    "tr-added-size": "Ditambahkan",
+    "tr-total-size": "Total",
+    "tr-package-size-snapshot-unavailable": "※ Informasi ukuran paket tidak tersedia untuk versi SNAPSHOT",
+    "tr-package-size-note": "※ Tidak termasuk paket bahasa dan dependensi",
+    "tr-uci-size-limit": "※ Batas ukuran file: 20480 byte: 20.00 KB",
+    
+    "tr-import-settings": "Impor",
+    "tr-export-settings": "Ekspor",
+    
+    "tr-asu-status-checking": "Memeriksa...",
+    "tr-asu-status-online": "Online",
+    "tr-asu-status-offline": "Offline",
+    "tr-asu-status-error": "Kesalahan",
+    "tr-asu-status-200": "Server ASU dapat diakses. Status: {status}",
+    "tr-asu-status-500": "Server ASU merespons dengan kesalahan internal. Status: {status}",
+    "tr-asu-status-unreachable": "Server ASU merespons dengan status yang tidak terduga: {status}",
+    "tr-asu-status-networkfail": "Gagal mencapai server ASU: {error}",
+    
+    "tr-extended-info": "Informasi Wilayah & ISP",
+    "tr-loading": "Memuat…",
+    "tr-notice": "Pemberitahuan",
+    "tr-country": "Wilayah",
+    "tr-timezone": "Zona Waktu",
+    "tr-zonename": "Nama Zona",
+    "tr-isp": "ISP",
+    "tr-as": "Nomor AS",
+    "tr-ip-address": "Alamat",
+    "tr-method": "Jenis Koneksi",
 
-  "tr-tui-main-menu": "Menu Utama",
-  "tr-tui-select": "Pilih",
-  "tr-tui-back": "Kembali",
-  "tr-tui-exit": "Keluar",
-  "tr-tui-yes": "Ya",
-  "tr-tui-no": "Tidak",
-  "tr-tui-ok": "OK",
-  "tr-tui-cancel": "Batal",
-  "tr-tui-review-configuration": "Tinjau & Terapkan Konfigurasi",
-  "tr-tui-view-device-info": "Lihat Informasi Perangkat",
-  "tr-tui-view-package-list": "Lihat Daftar Paket",
-  "tr-tui-view-config-vars": "Lihat Variabel Konfigurasi",
-  "tr-tui-view-postinst": "Lihat postinst.sh",
-  "tr-tui-view-setup": "Lihat setup.sh",
-  "tr-tui-apply-config": "Terapkan Konfigurasi",
-  "tr-tui-device-information": "Informasi Perangkat",
-  "tr-tui-package-list": "Daftar Paket",
-  "tr-tui-config-vars": "Variabel Konfigurasi",
-  "tr-tui-no-packages": "Tidak ada paket yang dipilih",
-  "tr-tui-no-config-vars": "Tidak ada variabel konfigurasi yang diatur",
-  "tr-tui-postinst-not-found": "File postinst.sh tidak ditemukan",
-  "tr-tui-setup-not-found": "File setup.sh tidak ditemukan",
-  "tr-tui-apply-confirm": "Terapkan konfigurasi ini?\n\nIni akan:\n1. Instal paket via postinst.sh\n2. Terapkan pengaturan via setup.sh\n3. Opsional restart\n\nLanjutkan?",
-  "tr-tui-installing-packages": "Menjalankan instalasi paket...",
-  "tr-tui-applying-config": "Menerapkan konfigurasi sistem...",
-  "tr-tui-config-applied": "Konfigurasi berhasil diterapkan!\n\nRestart sekarang?",
-  "tr-tui-auto-config-applied": "Konfigurasi otomatis diterapkan!",
-  "tr-tui-use-auto-config": "Gunakan konfigurasi yang terdeteksi otomatis ini?",
-  "tr-tui-package-categories": "Kategori Paket",
-  "tr-tui-select-category": "Pilih kategori:",
-  "tr-tui-space-toggle": "Spasi=toggle",
-  "tr-tui-ui-mode-select": "Pilih mode UI:",
-  "tr-tui-ui-whiptail": "whiptail (TUI berbasis dialog)",
-  "tr-tui-ui-simple": "simple (TUI berbasis daftar)",
-  "tr-tui-ui-choice": "Pilihan",
-  "tr-tui-ui-installing": "Menginstal whiptail...",
-  "tr-tui-ui-install-success": "whiptail berhasil diinstal!",
-  "tr-tui-ui-install-failed": "Gagal menginstal, menggunakan mode sederhana",
-  "tr-tui-gua": "GUA",
-  "tr-tui-pd": "PD"
+    "tr-basic-configuration": "Konfigurasi Dasar",
+    "tr-language": "Bahasa",
+    "tr-device-name": "Nama Perangkat",
+    "tr-root-password": "Kata Sandi Root",
+    "tr-lan-ipv4-address": "Alamat IPv4 LAN",
+    "tr-lan-ipv6-address": "Alamat IPv6 LAN",
+    "tr-ssh-interface": "Antarmuka SSH",
+    "tr-ssh-port": "Port SSH",
+    "tr-flow-offloading-type": "Jenis Flow Offloading",
+    "tr-restore-backup-path": "Jalur Pemulihan Cadangan",
+
+    "tr-wi-fi-configuration": "Konfigurasi Wi-Fi",
+    "tr-wi-fi-mode": "Mode Wi-Fi",
+    "tr-wi-fi-ssid": "SSID Wi-Fi",
+    "tr-wi-fi-password": "Kata Sandi Wi-Fi",
+    "tr-mobility-domain": "Domain Mobilitas",
+    "tr-min-snr": "SNR Minimum",
+    "tr-standard": "Standar",
+    "tr-usteer": "Usteer",
+    "tr-disabled": "Dinonaktifkan",
+    "tr-wifi-optimization-disabled": "Wi-Fi Dinonaktifkan",
+    
+    "tr-internet-connection": "Koneksi Internet",
+    "tr-connection-type": "Jenis Koneksi",
+    "tr-auto": "Otomatis",
+    "tr-pppoe": "PPPoE",
+    "tr-dslite": "DS-Lite",
+    "tr-mape": "MAP-E",
+    "tr-ap": "Mode AP",
+
+    "tr-auto-detection": "Deteksi Otomatis",
+    "tr-dhcp": "DHCP",
+
+    "tr-pppoe-credentials": "Kredensial PPPoE",
+    "tr-pppoe-username": "Nama Pengguna",
+    "tr-pppoe-password": "Kata Sandi",
+
+    "tr-dslite-settings": "Pengaturan DS-Lite",
+    "tr-dslite-aftr-type": "Jenis AFTR",
+    "tr-dslite-area": "Area",
+    "tr-dslite-aftr-ipv6-address": "Alamat AFTR",
+    "tr-dslite-notice1": "Catatan: Nilai sebenarnya mungkin berbeda.",
+
+    "tr-mape-type": "Jenis Alamat",
+    "tr-br": "Alamat Peer (BR)",
+    "tr-ea-len": "Panjang EA",
+    "tr-ipv4-prefix": "Alamat IPv4",
+    "tr-ipv4-prefix-length": "Panjang Prefiks IPv4",
+    "tr-ipv4-prefix-range": "Rentang Prefiks IPv4",
+    "tr-ipv6-prefix": "Prefiks IPv6",
+    "tr-ipv6-prefix-range": "Rentang Prefiks IPv6",
+    "tr-psid-offset": "Offset PSID",
+    "tr-psid-length": "Panjang PSID",
+    "tr-gua-prefix": "Prefiks GUA",
+    "tr-mape-notice1": "Catatan: Nilai sebenarnya mungkin berbeda.",
+    "tr-mape-notice2": "Catatan: Port nomor 1-1023 adalah port istimewa. Silakan periksa dengan ISP Anda untuk detailnya.",
+
+    "tr-ap-network-settings": "Pengaturan Jaringan AP",
+    "tr-ap-ip-address": "Alamat IP",
+    "tr-ap-gateway": "Gateway",
+
+    "tr-tuning": "Penyetelan",
+    "tr-netopt-optimization": "Optimasi Jaringan Dinamis",
+    "tr-netopt-optimization-disabled": "Optimasi Dinonaktifkan",
+    "tr-manual": "Manual",
+    "tr-auto-mode": "Mode Otomatis",
+    "tr-auto-optimization": "Optimasi Otomatis",
+    "tr-manual-mode": "Mode Manual",
+    "tr-manual-settings": "Pengaturan Manual",
+    "tr-tcp-read-memory": "Memori Baca TCP",
+    "tr-tcp-write-memory": "Memori Tulis TCP",
+    "tr-connection-tracking-max": "Pelacakan Koneksi Maksimum",
+    "tr-network-device-backlog": "Backlog Perangkat Jaringan",
+    "tr-socket-max-connections": "Koneksi Maksimum Socket",
+    "tr-tcp-congestion-control": "Kontrol Kemacetan TCP",
+    "tr-cubic-default": "cubic (default)",
+    "tr-bbr": "BBR",
+    "tr-reno": "Reno",
+    "tr-disabled-mode": "Mode Dinonaktifkan",
+
+    "tr-basic-system-features": "Fitur Sistem Dasar",
+    "tr-system-management": "Manajemen Sistem",
+    "tr-network-management": "Manajemen Jaringan",
+    "tr-wifi-management": "Manajemen Wi-Fi",
+    "tr-modem-support": "Dukungan Modem",
+    "tr-security-tools": "Alat Keamanan",
+    "tr-system-monitoring": "Pemantauan Sistem",
+    "tr-diagnostic-tools": "Alat Diagnostik Jaringan",
+    "tr-system-tools": "Alat Administrasi Sistem",
+    "tr-themes-dashboard": "Tema dan Dashboard",
+    "tr-utilities": "Utilitas",
+    "tr-usb-storage": "Dukungan Penyimpanan USB",
+    "tr-file-sharing": "Berbagi File",
+    "tr-dns-privacy": "DNS & Privasi",
+    
+    "tr-dnsmasq-settings": "Optimasi Server DNS",
+    "tr-dnsmasq-mode": "Mode Server DNS",
+    "tr-dnsmasq-auto": "Otomatis",
+    "tr-dnsmasq-manual": "Manual",
+    "tr-dnsmasq-disabled": "Dinonaktifkan",
+    "tr-dnsmasq-cache": "Ukuran Cache",
+    "tr-dnsmasq-negcache": "Cache Negatif",
+    "tr-dnsmasq-auto-optimization": "Optimasi Otomatis",
+    "tr-dnsmasq-optimization-disabled": "Optimasi Dinonaktifkan",
+
+    "tr-feedback-link": "Forum",
+
+    "tr-tui-main-menu": "Menu Utama",
+    "tr-tui-select": "Pilih",
+    "tr-tui-back": "Kembali",
+    "tr-tui-exit": "Keluar",
+    "tr-tui-yes": "Ya",
+    "tr-tui-no": "Tidak",
+    "tr-tui-ok": "OK",
+    "tr-tui-cancel": "Batal",
+    "tr-tui-choice": "Pilihan",
+    
+    "tr-tui-view-device-info": "Lihat Informasi Perangkat",
+    "tr-tui-view-package-list": "Lihat Daftar Paket",
+    "tr-tui-view-config-vars": "Lihat Variabel Konfigurasi",
+    "tr-tui-view-postinst": "Lihat postinst.sh",
+    "tr-tui-view-setup": "Lihat setup.sh",
+    "tr-tui-review-configuration": "Tinjau & Terapkan Konfigurasi",
+    "tr-tui-apply": "Terapkan Konfigurasi",
+    "tr-tui-no-packages": "Tidak ada paket yang dipilih",
+    "tr-tui-no-config-vars": "Tidak ada variabel konfigurasi yang diatur",
+    "tr-tui-postinst-not-found": "File postinst.sh tidak ditemukan",
+    "tr-tui-setup-not-found": "File setup.sh tidak ditemukan",
+    "tr-tui-apply-confirm-title": "Akan melakukan operasi berikut:",
+    "tr-tui-apply-confirm-step1": "1. Instal paket melalui postinst.sh",
+    "tr-tui-apply-confirm-step2": "2. Terapkan pengaturan melalui setup.sh",
+    "tr-tui-apply-confirm-step3": "3. Restart (dengan konfirmasi)",
+    "tr-tui-apply-confirm-question": "Jalankan sekarang?",
+    "tr-tui-installing-packages": "Menginstal paket",
+    "tr-tui-applying-config": "Menerapkan konfigurasi sistem",
+    "tr-tui-config-applied": "Konfigurasi berhasil diterapkan!",
+    "tr-tui-reboot-question": "Restart sekarang?",
+    "tr-tui-auto-config-applied": "Konfigurasi otomatis diterapkan!",
+    "tr-tui-use-auto-config": "Gunakan konfigurasi yang terdeteksi otomatis ini?",
+    
+    "tr-tui-space-toggle": "Spasi=toggle",
+    
+    "tr-tui-ui-mode-select": "Pilih mode UI:",
+    "tr-tui-ui-whiptail": "whiptail (TUI berbasis dialog)",
+    "tr-tui-ui-simple": "simple (TUI berbasis daftar)",
+    "tr-tui-ui-choice": "Pilihan",
+    "tr-tui-ui-installing": "Menginstal whiptail",
+    "tr-tui-ui-install-success": "whiptail berhasil diinstal!",
+    "tr-tui-ui-install-failed": "Gagal menginstal, menggunakan mode sederhana",
+    "tr-tui-gua": "GUA",
+    "tr-tui-pd": "PD"
 }
