--- a/www/langs/custom.ru.json
+++ b/www/langs/custom.ru.json
@@ -1,167 +1,189 @@
 {
-  "tr-custom-packages": "Установленные пакеты",
-  "tr-custom-defaults": "Скрипт для запуска при первой загрузке (uci-defaults)",
-  "tr-postinst": "Postinst (Скрипт установки пакета)",
-  "tr-uci": "UCI-defaults (Скрипт конфигурации загрузки)",
-  "tr-package-search": "Поиск пакетов",
-  "tr-add-commands": "Добавить команды",
-  "tr-base-size": "База",
-  "tr-added-size": "Добавлено",
-  "tr-total-size": "Всего",
-  "tr-package-size-snapshot-unavailable": "※ Информация о размере пакета недоступна для версий SNAPSHOT",
-  "tr-package-size-note": "※ Не включает языковые пакеты и зависимости",
-  "tr-uci-size-limit": "※ Ограничение размера файла: 20480 байт: 20.00 КБ",
-  "tr-import-settings": "Импорт",
-  "tr-export-settings": "Экспорт",
-  "tr-asu-status-checking": "Проверка...",
-  "tr-asu-status-online": "Онлайн",
-  "tr-asu-status-offline": "Офлайн",
-  "tr-asu-status-error": "Ошибка",
-  "tr-asu-status-200": "Сервер ASU доступен. Статус: {status}",
-  "tr-asu-status-500": "Сервер ASU ответил внутренней ошибкой. Статус: {status}",
-  "tr-asu-status-unreachable": "Сервер ASU ответил неожиданным статусом. Статус: {status}",
-  "tr-asu-status-networkfail": "Не удалось достичь сервера ASU: {error}",
-  "tr-extended-info": "Информация о регионе и провайдере",
-  "tr-loading": "Загрузка…",
-  "tr-notice": "Уведомление",
-  "tr-country": "Область",
-  "tr-timezone": "Часовой пояс",
-  "tr-zonename": "Название зоны",
-  "tr-isp": "Провайдер",
-  "tr-as": "Номер AS",
-  "tr-ip-address": "Адрес",
-  "tr-method": "Тип подключения",
-  "tr-basic-configuration": "Базовая конфигурация",
-  "tr-language": "Язык",
-  "tr-device-name": "Имя устройства",
-  "tr-root-password": "Пароль root",
-  "tr-lan-ipv4-address": "IPv4-адрес LAN",
-  "tr-lan-ipv6-address": "IPv6-адрес LAN",
-  "tr-ssh-interface": "Интерфейс SSH",
-  "tr-ssh-port": "Порт SSH",
-  "tr-lan-dhcp-start": "Начало DHCP",
-  "tr-lan-dhcp-limit": "Лимит DHCP",
-  "tr-lan-dhcp-lease-time": "Время аренды DHCP",
-  "tr-wifi-configuration": "Конфигурация Wi-Fi",
-  "tr-wifi-disabled": "Wi-Fi отключен",
-  "tr-wifi-enabled": "Wi-Fi включен",
-  "tr-wifi-radio0": "Диапазон 2,4 ГГц",
-  "tr-wifi-radio1": "Диапазон 5 ГГц",
-  "tr-ssid-2ghz": "SSID (2,4 ГГц)",
-  "tr-ssid-5ghz": "SSID (5 ГГц)",
-  "tr-password-2ghz": "Пароль (2,4 ГГц)",
-  "tr-password-5ghz": "Пароль (5 ГГц)",
-  "tr-encryption": "Шифрование",
-  "tr-wifi-country-code": "Код страны",
-  "tr-wifi-advanced": "Расширенные настройки Wi-Fi",
-  "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "Защита управляющих кадров 802.11w",
-  "tr-80211w-disabled": "Отключено",
-  "tr-80211w-optional": "Опционально",
-  "tr-80211w-required": "Обязательно",
-  "tr-internet-connection": "Интернет-соединение",
-  "tr-manual-setting": "Ручная настройка",
-  "tr-manual-setting-warning": "Режим ручной настройки: Автоматическое обнаружение отключено. Пожалуйста, настройте вручную.",
-  "tr-auto": "Авто",
-  "tr-auto-detection": "Автоматическое обнаружение",
-  "tr-dhcp": "DHCP",
-  "tr-pppoe": "PPPoE",
-  "tr-dslite": "DS-Lite",
-  "tr-mape": "MAP-E",
-  "tr-ap-mode": "Режим точки доступа",
-  "tr-pppoe-username": "Имя пользователя",
-  "tr-pppoe-password": "Пароль",
-  "tr-dslite-aftr": "Адрес AFTR",
-  "tr-mape-settings": "Настройки MAP-E",
-  "tr-mape-ipv4addr": "IPv4-адрес",
-  "tr-mape-ip6prefix": "Префикс IPv6",
-  "tr-mape-peeraddr": "Адрес узла",
-  "tr-mape-psidlen": "Длина PSID",
-  "tr-mape-psid": "PSID",
-  "tr-mape-offset": "Смещение",
-  "tr-ap-dhcp-enabled": "DHCP включен",
-  "tr-ap-gateway": "Шлюз",
-  "tr-tuning": "Настройка",
-  "tr-netopt-optimization": "Динамическая оптимизация сети",
-  "tr-netopt-optimization-disabled": "Оптимизация отключена",
-  "tr-manual": "Вручную",
-  "tr-auto-mode": "Автоматический режим",
-  "tr-auto-optimization": "Автоматическая оптимизация",
-  "tr-manual-mode": "Ручной режим",
-  "tr-manual-settings": "Ручные настройки",
-  "tr-tcp-read-memory": "Память чтения TCP",
-  "tr-tcp-write-memory": "Память записи TCP",
-  "tr-connection-tracking-max": "Максимум отслеживания соединений",
-  "tr-network-device-backlog": "Очередь сетевых устройств",
-  "tr-socket-max-connections": "Максимум соединений сокета",
-  "tr-tcp-congestion-control": "Управление перегрузкой TCP",
-  "tr-cubic-default": "cubic (по умолчанию)",
-  "tr-bbr": "BBR",
-  "tr-reno": "Reno",
-  "tr-disabled-mode": "Отключенный режим",
-  "tr-basic-system-features": "Основные системные функции",
-  "tr-system-management": "Управление системой",
-  "tr-network-management": "Управление сетью",
-  "tr-wifi-management": "Управление Wi-Fi",
-  "tr-modem-support": "Поддержка модема",
-  "tr-security-tools": "Инструменты безопасности",
-  "tr-system-monitoring": "Мониторинг системы",
-  "tr-diagnostic-tools": "Инструменты диагностики сети",
-  "tr-system-tools": "Инструменты администрирования системы",
-  "tr-themes-dashboard": "Темы и панель управления",
-  "tr-utilities": "Утилиты",
-  "tr-usb-storage": "Поддержка USB-накопителей",
-  "tr-file-sharing": "Общий доступ к файлам",
-  "tr-dns-privacy": "DNS и конфиденциальность",
-  "tr-dnsmasq-settings": "Оптимизация DNS-сервера",
-  "tr-dnsmasq-mode": "Режим DNS-сервера",
-  "tr-dnsmasq-auto": "Авто",
-  "tr-dnsmasq-manual": "Вручную",
-  "tr-dnsmasq-disabled": "Отключено",
-  "tr-dnsmasq-cache": "Размер кэша",
-  "tr-dnsmasq-negcache": "Отрицательный кэш",
-  "tr-dnsmasq-auto-optimization": "Автоматическая оптимизация",
-  "tr-dnsmasq-optimization-disabled": "Оптимизация отключена",
-  "tr-feedback-link": "Форум",
+    "tr-custom-packages": "Установленные пакеты",
+    "tr-custom-defaults": "Скрипт, выполняемый при первой загрузке (uci-defaults)",
+    "tr-postinst": "Postinst (Скрипт установки пакетов)",
+    "tr-uci": "UCI-defaults (Скрипт настройки загрузки)",
+    "tr-package-search": "Поиск пакетов",
+    "tr-add-commands": "Добавить команду",
+    "tr-base-size": "Базовый",
+    "tr-added-size": "Добавлено",
+    "tr-total-size": "Всего",
+    "tr-package-size-snapshot-unavailable": "※ Информация о размере пакетов недоступна для версии SNAPSHOT",
+    "tr-package-size-note": "※ Языковые пакеты и зависимости не включены",
+    "tr-uci-size-limit": "※ Ограничение размера файла: 20480 байт: 20.00 КБ",
+    
+    "tr-import-settings": "Импорт",
+    "tr-export-settings": "Экспорт",
+    
+    "tr-asu-status-checking": "Проверка...",
+    "tr-asu-status-online": "В сети",
+    "tr-asu-status-offline": "Не в сети",
+    "tr-asu-status-error": "Ошибка",
+    "tr-asu-status-200": "Сервер ASU доступен. Статус: {status}",
+    "tr-asu-status-500": "Сервер ASU ответил с внутренней ошибкой. Статус: {status}",
+    "tr-asu-status-unreachable": "Сервер ASU ответил с неожиданным статусом: {status}",
+    "tr-asu-status-networkfail": "Не удалось подключиться к серверу ASU: {error}",
+    
+    "tr-extended-info": "Информация о регионе и провайдере",
+    "tr-loading": "Загрузка…",
+    "tr-notice": "Уведомление",
+    "tr-country": "Регион",
+    "tr-timezone": "Часовой пояс",
+    "tr-zonename": "Название зоны",
+    "tr-isp": "Провайдер",
+    "tr-as": "Номер AS",
+    "tr-ip-address": "Адрес",
+    "tr-method": "Тип подключения",
 
-  "tr-tui-main-menu": "Главное меню",
-  "tr-tui-select": "Выбрать",
-  "tr-tui-back": "Назад",
-  "tr-tui-exit": "Выход",
-  "tr-tui-yes": "Да",
-  "tr-tui-no": "Нет",
-  "tr-tui-ok": "OK",
-  "tr-tui-cancel": "Отмена",
-  "tr-tui-review-configuration": "Проверить и применить конфигурацию",
-  "tr-tui-view-device-info": "Просмотреть информацию об устройстве",
-  "tr-tui-view-package-list": "Просмотреть список пакетов",
-  "tr-tui-view-config-vars": "Просмотреть переменные конфигурации",
-  "tr-tui-view-postinst": "Просмотреть postinst.sh",
-  "tr-tui-view-setup": "Просмотреть setup.sh",
-  "tr-tui-apply-config": "Применить конфигурацию",
-  "tr-tui-device-information": "Информация об устройстве",
-  "tr-tui-package-list": "Список пакетов",
-  "tr-tui-config-vars": "Переменные конфигурации",
-  "tr-tui-no-packages": "Пакеты не выбраны",
-  "tr-tui-no-config-vars": "Переменные конфигурации не установлены",
-  "tr-tui-postinst-not-found": "Файл postinst.sh не найден",
-  "tr-tui-setup-not-found": "Файл setup.sh не найден",
-  "tr-tui-apply-confirm": "Применить эту конфигурацию?\n\nЭто:\n1. Установит пакеты через postinst.sh\n2. Применит настройки через setup.sh\n3. По желанию перезагрузит систему\n\nПродолжить?",
-  "tr-tui-installing-packages": "Выполняется установка пакетов...",
-  "tr-tui-applying-config": "Применяется конфигурация системы...",
-  "tr-tui-config-applied": "Конфигурация успешно применена!\n\nПерезагрузить сейчас?",
-  "tr-tui-auto-config-applied": "Автоматическая конфигурация применена!",
-  "tr-tui-use-auto-config": "Использовать эту автоматически определенную конфигурацию?",
-  "tr-tui-package-categories": "Категории пакетов",
-  "tr-tui-select-category": "Выберите категорию:",
-  "tr-tui-space-toggle": "Пробел=переключить",
-  "tr-tui-ui-mode-select": "Выберите режим UI:",
-  "tr-tui-ui-whiptail": "whiptail (диалоговый TUI)",
-  "tr-tui-ui-simple": "simple (списочный TUI)",
-  "tr-tui-ui-choice": "Выбор",
-  "tr-tui-ui-installing": "Установка whiptail...",
-  "tr-tui-ui-install-success": "whiptail успешно установлен!",
-  "tr-tui-ui-install-failed": "Не удалось установить, используется простой режим",
-  "tr-tui-gua": "GUA",
-  "tr-tui-pd": "PD"
+    "tr-basic-configuration": "Базовая конфигурация",
+    "tr-language": "Язык",
+    "tr-device-name": "Имя устройства",
+    "tr-root-password": "Пароль root",
+    "tr-lan-ipv4-address": "IPv4-адрес LAN",
+    "tr-lan-ipv6-address": "IPv6-адрес LAN",
+    "tr-ssh-interface": "Интерфейс SSH",
+    "tr-ssh-port": "Порт SSH",
+    "tr-flow-offloading-type": "Тип разгрузки потоков",
+    "tr-restore-backup-path": "Путь восстановления резервной копии",
+
+    "tr-wi-fi-configuration": "Настройка Wi-Fi",
+    "tr-wi-fi-mode": "Режим Wi-Fi",
+    "tr-wi-fi-ssid": "SSID Wi-Fi",
+    "tr-wi-fi-password": "Пароль Wi-Fi",
+    "tr-mobility-domain": "Домен мобильности",
+    "tr-min-snr": "Минимальный SNR",
+    "tr-standard": "Стандартный",
+    "tr-usteer": "Usteer",
+    "tr-disabled": "Отключено",
+    "tr-wifi-optimization-disabled": "Wi-Fi отключен",
+    
+    "tr-internet-connection": "Интернет-соединение",
+    "tr-connection-type": "Тип подключения",
+    "tr-auto": "Автоматически",
+    "tr-pppoe": "PPPoE",
+    "tr-dslite": "DS-Lite",
+    "tr-mape": "MAP-E",
+    "tr-ap": "Режим AP",
+
+    "tr-auto-detection": "Автоматическое определение",
+    "tr-dhcp": "DHCP",
+
+    "tr-pppoe-credentials": "Учетные данные PPPoE",
+    "tr-pppoe-username": "Имя пользователя",
+    "tr-pppoe-password": "Пароль",
+
+    "tr-dslite-settings": "Настройки DS-Lite",
+    "tr-dslite-aftr-type": "Тип AFTR",
+    "tr-dslite-area": "Регион",
+    "tr-dslite-aftr-ipv6-address": "Адрес AFTR",
+    "tr-dslite-notice1": "Примечание: фактические значения могут отличаться.",
+
+    "tr-mape-type": "Тип адреса",
+    "tr-br": "Адрес узла (BR)",
+    "tr-ea-len": "Длина EA",
+    "tr-ipv4-prefix": "IPv4-адрес",
+    "tr-ipv4-prefix-length": "Длина префикса IPv4",
+    "tr-ipv4-prefix-range": "Диапазон префикса IPv4",
+    "tr-ipv6-prefix": "Префикс IPv6",
+    "tr-ipv6-prefix-range": "Диапазон префикса IPv6",
+    "tr-psid-offset": "Смещение PSID",
+    "tr-psid-length": "Длина PSID",
+    "tr-gua-prefix": "Префикс GUA",
+    "tr-mape-notice1": "Примечание: фактические значения могут отличаться.",
+    "tr-mape-notice2": "Примечание: порты 1-1023 являются привилегированными. Для получения подробной информации обратитесь к своему провайдеру.",
+
+    "tr-ap-network-settings": "Сетевые настройки AP",
+    "tr-ap-ip-address": "IP-адрес",
+    "tr-ap-gateway": "Шлюз",
+
+    "tr-tuning": "Настройка",
+    "tr-netopt-optimization": "Динамическая оптимизация сети",
+    "tr-netopt-optimization-disabled": "Оптимизация отключена",
+    "tr-manual": "Вручную",
+    "tr-auto-mode": "Автоматический режим",
+    "tr-auto-optimization": "Автоматическая оптимизация",
+    "tr-manual-mode": "Ручной режим",
+    "tr-manual-settings": "Ручные настройки",
+    "tr-tcp-read-memory": "Память чтения TCP",
+    "tr-tcp-write-memory": "Память записи TCP",
+    "tr-connection-tracking-max": "Максимум отслеживания соединений",
+    "tr-network-device-backlog": "Очередь сетевых устройств",
+    "tr-socket-max-connections": "Максимум соединений сокетов",
+    "tr-tcp-congestion-control": "Контроль перегрузки TCP",
+    "tr-cubic-default": "cubic (по умолчанию)",
+    "tr-bbr": "BBR",
+    "tr-reno": "Reno",
+    "tr-disabled-mode": "Режим отключен",
+
+    "tr-basic-system-features": "Базовые системные функции",
+    "tr-system-management": "Управление системой",
+    "tr-network-management": "Управление сетью",
+    "tr-wifi-management": "Управление Wi-Fi",
+    "tr-modem-support": "Поддержка модемов",
+    "tr-security-tools": "Инструменты безопасности",
+    "tr-system-monitoring": "Мониторинг системы",
+    "tr-diagnostic-tools": "Инструменты сетевой диагностики",
+    "tr-system-tools": "Инструменты администрирования системы",
+    "tr-themes-dashboard": "Темы и панель управления",
+    "tr-utilities": "Утилиты",
+    "tr-usb-storage": "Поддержка USB-накопителей",
+    "tr-file-sharing": "Общий доступ к файлам",
+    "tr-dns-privacy": "DNS и конфиденциальность",
+    
+    "tr-dnsmasq-settings": "Оптимизация DNS-сервера",
+    "tr-dnsmasq-mode": "Режим DNS-сервера",
+    "tr-dnsmasq-auto": "Автоматически",
+    "tr-dnsmasq-manual": "Вручную",
+    "tr-dnsmasq-disabled": "Отключено",
+    "tr-dnsmasq-cache": "Размер кэша",
+    "tr-dnsmasq-negcache": "Негативный кэш",
+    "tr-dnsmasq-auto-optimization": "Автоматическая оптимизация",
+    "tr-dnsmasq-optimization-disabled": "Оптимизация отключена",
+
+    "tr-feedback-link": "Форум",
+
+    "tr-tui-main-menu": "Главное меню",
+    "tr-tui-select": "Выбрать",
+    "tr-tui-back": "Назад",
+    "tr-tui-exit": "Выход",
+    "tr-tui-yes": "Да",
+    "tr-tui-no": "Нет",
+    "tr-tui-ok": "ОК",
+    "tr-tui-cancel": "Отмена",
+    "tr-tui-choice": "Выбор",
+    
+    "tr-tui-view-device-info": "Просмотр информации об устройстве",
+    "tr-tui-view-package-list": "Просмотр списка пакетов",
+    "tr-tui-view-config-vars": "Просмотр переменных конфигурации",
+    "tr-tui-view-postinst": "Просмотр postinst.sh",
+    "tr-tui-view-setup": "Просмотр setup.sh",
+    "tr-tui-review-configuration": "Проверка и применение конфигурации",
+    "tr-tui-apply": "Применить конфигурацию",
+    "tr-tui-no-packages": "Пакеты не выбраны",
+    "tr-tui-no-config-vars": "Переменные конфигурации не заданы",
+    "tr-tui-postinst-not-found": "Файл postinst.sh не найден",
+    "tr-tui-setup-not-found": "Файл setup.sh не найден",
+    "tr-tui-apply-confirm-title": "Будут выполнены следующие операции:",
+    "tr-tui-apply-confirm-step1": "1. Установка пакетов через postinst.sh",
+    "tr-tui-apply-confirm-step2": "2. Применение настроек через setup.sh",
+    "tr-tui-apply-confirm-step3": "3. Перезагрузка (с подтверждением)",
+    "tr-tui-apply-confirm-question": "Выполнить сейчас?",
+    "tr-tui-installing-packages": "Установка пакетов",
+    "tr-tui-applying-config": "Применение конфигурации системы",
+    "tr-tui-config-applied": "Конфигурация успешно применена!",
+    "tr-tui-reboot-question": "Перезагрузить сейчас?",
+    "tr-tui-auto-config-applied": "Автоматическая конфигурация применена!",
+    "tr-tui-use-auto-config": "Использовать эту автоматически определенную конфигурацию?",
+    
+    "tr-tui-space-toggle": "Пробел=переключить",
+    
+    "tr-tui-ui-mode-select": "Выберите режим интерфейса:",
+    "tr-tui-ui-whiptail": "whiptail (диалоговый TUI)",
+    "tr-tui-ui-simple": "simple (списочный TUI)",
+    "tr-tui-ui-choice": "Выбор",
+    "tr-tui-ui-installing": "Установка whiptail",
+    "tr-tui-ui-install-success": "whiptail успешно установлен!",
+    "tr-tui-ui-install-failed": "Не удалось установить, используется простой режим",
+    "tr-tui-gua": "GUA",
+    "tr-tui-pd": "PD"
 }
