--- a/www/langs/custom.de.json
+++ b/www/langs/custom.de.json
@@ -1,167 +1,189 @@
 {
-  "tr-custom-packages": "Installierte Pakete",
-  "tr-custom-defaults": "Skript zum Ausführen beim ersten Start (uci-defaults)",
-  "tr-postinst": "Postinst (Paketinstallationsskript)",
-  "tr-uci": "UCI-defaults (Boot-Konfigurationsskript)",
-  "tr-package-search": "Paketsuche",
-  "tr-add-commands": "Befehle hinzufügen",
-  "tr-base-size": "Basis",
-  "tr-added-size": "Hinzugefügt",
-  "tr-total-size": "Gesamt",
-  "tr-package-size-snapshot-unavailable": "※ Paketgrößeninformationen sind für SNAPSHOT-Versionen nicht verfügbar",
-  "tr-package-size-note": "※ Sprach- und Abhängigkeitspakete nicht enthalten",
-  "tr-uci-size-limit": "※ Dateigrößenlimit: 20480 Bytes: 20.00 KB",
-  "tr-import-settings": "Importieren",
-  "tr-export-settings": "Exportieren",
-  "tr-asu-status-checking": "Überprüfung...",
-  "tr-asu-status-online": "Online",
-  "tr-asu-status-offline": "Offline",
-  "tr-asu-status-error": "Fehler",
-  "tr-asu-status-200": "ASU-Server ist erreichbar. Status: {status}",
-  "tr-asu-status-500": "ASU-Server hat mit einem internen Fehler geantwortet. Status: {status}",
-  "tr-asu-status-unreachable": "ASU-Server hat mit einem unerwarteten Status geantwortet: {status}",
-  "tr-asu-status-networkfail": "Verbindung zum ASU-Server fehlgeschlagen: {error}",
-  "tr-extended-info": "Region & ISP-Informationen",
-  "tr-loading": "Laden…",
-  "tr-notice": "Hinweis",
-  "tr-country": "Gebiet",
-  "tr-timezone": "Zeitzone",
-  "tr-zonename": "Zonenname",
-  "tr-isp": "ISP",
-  "tr-as": "AS-Nummer",
-  "tr-ip-address": "Adresse",
-  "tr-method": "Verbindungstyp",
-  "tr-basic-configuration": "Basiskonfiguration",
-  "tr-language": "Sprache",
-  "tr-device-name": "Gerätename",
-  "tr-root-password": "Root-Passwort",
-  "tr-lan-ipv4-address": "LAN IPv4-Adresse",
-  "tr-lan-ipv6-address": "LAN IPv6-Adresse",
-  "tr-ssh-interface": "SSH-Schnittstelle",
-  "tr-ssh-port": "SSH-Port",
-  "tr-lan-dhcp-start": "DHCP-Start",
-  "tr-lan-dhcp-limit": "DHCP-Limit",
-  "tr-lan-dhcp-lease-time": "DHCP-Leasezeit",
-  "tr-wifi-configuration": "WLAN-Konfiguration",
-  "tr-wifi-disabled": "WLAN deaktiviert",
-  "tr-wifi-enabled": "WLAN aktiviert",
-  "tr-wifi-radio0": "2,4-GHz-Band",
-  "tr-wifi-radio1": "5-GHz-Band",
-  "tr-ssid-2ghz": "SSID (2,4 GHz)",
-  "tr-ssid-5ghz": "SSID (5 GHz)",
-  "tr-password-2ghz": "Passwort (2,4 GHz)",
-  "tr-password-5ghz": "Passwort (5 GHz)",
-  "tr-encryption": "Verschlüsselung",
-  "tr-wifi-country-code": "Ländercode",
-  "tr-wifi-advanced": "Erweiterte WLAN-Einstellungen",
-  "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "802.11w Management Frame Protection",
-  "tr-80211w-disabled": "Deaktiviert",
-  "tr-80211w-optional": "Optional",
-  "tr-80211w-required": "Erforderlich",
-  "tr-internet-connection": "Internetverbindung",
-  "tr-manual-setting": "Manuelle Einstellung",
-  "tr-manual-setting-warning": "Manueller Einstellungsmodus: Automatische Erkennung ist deaktiviert. Bitte manuell konfigurieren.",
-  "tr-auto": "Auto",
-  "tr-auto-detection": "Automatische Erkennung",
-  "tr-dhcp": "DHCP",
-  "tr-pppoe": "PPPoE",
-  "tr-dslite": "DS-Lite",
-  "tr-mape": "MAP-E",
-  "tr-ap-mode": "Access-Point-Modus",
-  "tr-pppoe-username": "Benutzername",
-  "tr-pppoe-password": "Passwort",
-  "tr-dslite-aftr": "AFTR-Adresse",
-  "tr-mape-settings": "MAP-E-Einstellungen",
-  "tr-mape-ipv4addr": "IPv4-Adresse",
-  "tr-mape-ip6prefix": "IPv6-Präfix",
-  "tr-mape-peeraddr": "Peer-Adresse",
-  "tr-mape-psidlen": "PSID-Länge",
-  "tr-mape-psid": "PSID",
-  "tr-mape-offset": "Offset",
-  "tr-ap-dhcp-enabled": "DHCP aktiviert",
-  "tr-ap-gateway": "Gateway",
-  "tr-tuning": "Tuning",
-  "tr-netopt-optimization": "Dynamische Netzwerkoptimierung",
-  "tr-netopt-optimization-disabled": "Optimierung deaktiviert",
-  "tr-manual": "Manuell",
-  "tr-auto-mode": "Auto-Modus",
-  "tr-auto-optimization": "Auto-Optimierung",
-  "tr-manual-mode": "Manueller Modus",
-  "tr-manual-settings": "Manuelle Einstellungen",
-  "tr-tcp-read-memory": "TCP-Lesespeicher",
-  "tr-tcp-write-memory": "TCP-Schreibspeicher",
-  "tr-connection-tracking-max": "Max. Connection Tracking",
-  "tr-network-device-backlog": "Netzwerkgerät-Backlog",
-  "tr-socket-max-connections": "Max. Socket-Verbindungen",
-  "tr-tcp-congestion-control": "TCP-Congestion-Control",
-  "tr-cubic-default": "cubic (Standard)",
-  "tr-bbr": "BBR",
-  "tr-reno": "Reno",
-  "tr-disabled-mode": "Deaktivierter Modus",
-  "tr-basic-system-features": "Grundlegende Systemfunktionen",
-  "tr-system-management": "Systemverwaltung",
-  "tr-network-management": "Netzwerkverwaltung",
-  "tr-wifi-management": "WLAN-Verwaltung",
-  "tr-modem-support": "Modem-Unterstützung",
-  "tr-security-tools": "Sicherheitstools",
-  "tr-system-monitoring": "Systemüberwachung",
-  "tr-diagnostic-tools": "Netzwerkdiagnosetools",
-  "tr-system-tools": "Systemadministrationstools",
-  "tr-themes-dashboard": "Themen und Dashboard",
-  "tr-utilities": "Dienstprogramme",
-  "tr-usb-storage": "USB-Speicherunterstützung",
-  "tr-file-sharing": "Dateifreigabe",
-  "tr-dns-privacy": "DNS & Datenschutz",
-  "tr-dnsmasq-settings": "DNS-Server-Optimierung",
-  "tr-dnsmasq-mode": "DNS-Servermodus",
-  "tr-dnsmasq-auto": "Auto",
-  "tr-dnsmasq-manual": "Manuell",
-  "tr-dnsmasq-disabled": "Deaktiviert",
-  "tr-dnsmasq-cache": "Cache-Größe",
-  "tr-dnsmasq-negcache": "Negativer Cache",
-  "tr-dnsmasq-auto-optimization": "Auto-Optimierung",
-  "tr-dnsmasq-optimization-disabled": "Optimierung deaktiviert",
-  "tr-feedback-link": "Forum",
+    "tr-custom-packages": "Installierte Pakete",
+    "tr-custom-defaults": "Skript beim ersten Start ausgeführt (uci-defaults)",
+    "tr-postinst": "Postinst (Paketinstallationsskript)",
+    "tr-uci": "UCI-defaults (Boot-Konfigurationsskript)",
+    "tr-package-search": "Paketsuche",
+    "tr-add-commands": "Befehl hinzufügen",
+    "tr-base-size": "Basis",
+    "tr-added-size": "Hinzugefügt",
+    "tr-total-size": "Gesamt",
+    "tr-package-size-snapshot-unavailable": "※ Paketgrößeninformationen sind für SNAPSHOT-Versionen nicht verfügbar",
+    "tr-package-size-note": "※ Sprach- und Abhängigkeitspakete sind nicht enthalten",
+    "tr-uci-size-limit": "※ Dateigrößenlimit: 20480 Bytes: 20.00 KB",
+    
+    "tr-import-settings": "Importieren",
+    "tr-export-settings": "Exportieren",
+    
+    "tr-asu-status-checking": "Überprüfen...",
+    "tr-asu-status-online": "Online",
+    "tr-asu-status-offline": "Offline",
+    "tr-asu-status-error": "Fehler",
+    "tr-asu-status-200": "ASU-Server ist erreichbar. Status: {status}",
+    "tr-asu-status-500": "ASU-Server hat mit einem internen Fehler geantwortet. Status: {status}",
+    "tr-asu-status-unreachable": "ASU-Server hat mit einem unerwarteten Status geantwortet: {status}",
+    "tr-asu-status-networkfail": "Verbindung zum ASU-Server fehlgeschlagen: {error}",
+    
+    "tr-extended-info": "Regions- und ISP-Informationen",
+    "tr-loading": "Lädt…",
+    "tr-notice": "Hinweis",
+    "tr-country": "Region",
+    "tr-timezone": "Zeitzone",
+    "tr-zonename": "Zonenname",
+    "tr-isp": "ISP",
+    "tr-as": "AS-Nummer",
+    "tr-ip-address": "Adresse",
+    "tr-method": "Verbindungstyp",
 
-  "tr-tui-main-menu": "Hauptmenü",
-  "tr-tui-select": "Auswählen",
-  "tr-tui-back": "Zurück",
-  "tr-tui-exit": "Beenden",
-  "tr-tui-yes": "Ja",
-  "tr-tui-no": "Nein",
-  "tr-tui-ok": "OK",
-  "tr-tui-cancel": "Abbrechen",
-  "tr-tui-review-configuration": "Konfiguration prüfen & anwenden",
-  "tr-tui-view-device-info": "Geräteinformationen anzeigen",
-  "tr-tui-view-package-list": "Paketliste anzeigen",
-  "tr-tui-view-config-vars": "Konfigurationsvariablen anzeigen",
-  "tr-tui-view-postinst": "postinst.sh anzeigen",
-  "tr-tui-view-setup": "setup.sh anzeigen",
-  "tr-tui-apply-config": "Konfiguration anwenden",
-  "tr-tui-device-information": "Geräteinformationen",
-  "tr-tui-package-list": "Paketliste",
-  "tr-tui-config-vars": "Konfigurationsvariablen",
-  "tr-tui-no-packages": "Keine Pakete ausgewählt",
-  "tr-tui-no-config-vars": "Keine Konfigurationsvariablen gesetzt",
-  "tr-tui-postinst-not-found": "postinst.sh Datei nicht gefunden",
-  "tr-tui-setup-not-found": "setup.sh Datei nicht gefunden",
-  "tr-tui-apply-confirm": "Diese Konfiguration anwenden?\n\nDies wird:\n1. Pakete via postinst.sh installieren\n2. Einstellungen via setup.sh anwenden\n3. Optional neustarten\n\nFortfahren?",
-  "tr-tui-installing-packages": "Paketinstallation wird ausgeführt...",
-  "tr-tui-applying-config": "Systemkonfiguration wird angewendet...",
-  "tr-tui-config-applied": "Konfiguration erfolgreich angewendet!\n\nJetzt neu starten?",
-  "tr-tui-auto-config-applied": "Auto-Konfiguration angewendet!",
-  "tr-tui-use-auto-config": "Diese automatisch erkannte Konfiguration verwenden?",
-  "tr-tui-package-categories": "Paketkategorien",
-  "tr-tui-select-category": "Kategorie auswählen:",
-  "tr-tui-space-toggle": "Leertaste=umschalten",
-  "tr-tui-ui-mode-select": "UI-Modus auswählen:",
-  "tr-tui-ui-whiptail": "whiptail (dialogbasiertes TUI)",
-  "tr-tui-ui-simple": "simple (listenbasiertes TUI)",
-  "tr-tui-ui-choice": "Auswahl",
-  "tr-tui-ui-installing": "whiptail wird installiert...",
-  "tr-tui-ui-install-success": "whiptail erfolgreich installiert!",
-  "tr-tui-ui-install-failed": "Installation fehlgeschlagen, verwende einfachen Modus",
-  "tr-tui-gua": "GUA",
-  "tr-tui-pd": "PD"
+    "tr-basic-configuration": "Basiskonfiguration",
+    "tr-language": "Sprache",
+    "tr-device-name": "Gerätename",
+    "tr-root-password": "Root-Passwort",
+    "tr-lan-ipv4-address": "LAN IPv4-Adresse",
+    "tr-lan-ipv6-address": "LAN IPv6-Adresse",
+    "tr-ssh-interface": "SSH-Schnittstelle",
+    "tr-ssh-port": "SSH-Port",
+    "tr-flow-offloading-type": "Flow-Offloading-Typ",
+    "tr-restore-backup-path": "Wiederherstellungs-Backup-Pfad",
+
+    "tr-wi-fi-configuration": "Wi-Fi-Konfiguration",
+    "tr-wi-fi-mode": "Wi-Fi-Modus",
+    "tr-wi-fi-ssid": "Wi-Fi-SSID",
+    "tr-wi-fi-password": "Wi-Fi-Passwort",
+    "tr-mobility-domain": "Mobility-Domain",
+    "tr-min-snr": "Minimales SNR",
+    "tr-standard": "Standard",
+    "tr-usteer": "Usteer",
+    "tr-disabled": "Deaktiviert",
+    "tr-wifi-optimization-disabled": "Wi-Fi deaktiviert",
+    
+    "tr-internet-connection": "Internetverbindung",
+    "tr-connection-type": "Verbindungstyp",
+    "tr-auto": "Automatisch",
+    "tr-pppoe": "PPPoE",
+    "tr-dslite": "DS-Lite",
+    "tr-mape": "MAP-E",
+    "tr-ap": "AP-Modus",
+
+    "tr-auto-detection": "Automatische Erkennung",
+    "tr-dhcp": "DHCP",
+
+    "tr-pppoe-credentials": "PPPoE-Anmeldedaten",
+    "tr-pppoe-username": "Benutzername",
+    "tr-pppoe-password": "Passwort",
+
+    "tr-dslite-settings": "DS-Lite-Einstellungen",
+    "tr-dslite-aftr-type": "AFTR-Typ",
+    "tr-dslite-area": "Bereich",
+    "tr-dslite-aftr-ipv6-address": "AFTR-Adresse",
+    "tr-dslite-notice1": "Hinweis: Die tatsächlichen Werte können abweichen.",
+
+    "tr-mape-type": "Adresstyp",
+    "tr-br": "Peer-Adresse (BR)",
+    "tr-ea-len": "EA-Länge",
+    "tr-ipv4-prefix": "IPv4-Adresse",
+    "tr-ipv4-prefix-length": "IPv4-Präfixlänge",
+    "tr-ipv4-prefix-range": "IPv4-Präfixbereich",
+    "tr-ipv6-prefix": "IPv6-Präfix",
+    "tr-ipv6-prefix-range": "IPv6-Präfixbereich",
+    "tr-psid-offset": "PSID-Offset",
+    "tr-psid-length": "PSID-Länge",
+    "tr-gua-prefix": "GUA-Präfix",
+    "tr-mape-notice1": "Hinweis: Die tatsächlichen Werte können abweichen.",
+    "tr-mape-notice2": "Hinweis: Ports 1-1023 sind privilegierte Ports. Bitte erkundigen Sie sich bei Ihrem ISP für Details.",
+
+    "tr-ap-network-settings": "AP-Netzwerkeinstellungen",
+    "tr-ap-ip-address": "IP-Adresse",
+    "tr-ap-gateway": "Gateway",
+
+    "tr-tuning": "Optimierung",
+    "tr-netopt-optimization": "Dynamische Netzwerkoptimierung",
+    "tr-netopt-optimization-disabled": "Optimierung deaktiviert",
+    "tr-manual": "Manuell",
+    "tr-auto-mode": "Automatischer Modus",
+    "tr-auto-optimization": "Automatische Optimierung",
+    "tr-manual-mode": "Manueller Modus",
+    "tr-manual-settings": "Manuelle Einstellungen",
+    "tr-tcp-read-memory": "TCP-Lesespeicher",
+    "tr-tcp-write-memory": "TCP-Schreibspeicher",
+    "tr-connection-tracking-max": "Maximale Verbindungsverfolgung",
+    "tr-network-device-backlog": "Netzwerkgeräte-Backlog",
+    "tr-socket-max-connections": "Maximale Socket-Verbindungen",
+    "tr-tcp-congestion-control": "TCP-Staukontrolle",
+    "tr-cubic-default": "cubic (Standard)",
+    "tr-bbr": "BBR",
+    "tr-reno": "Reno",
+    "tr-disabled-mode": "Deaktivierter Modus",
+
+    "tr-basic-system-features": "Basis-Systemfunktionen",
+    "tr-system-management": "Systemverwaltung",
+    "tr-network-management": "Netzwerkverwaltung",
+    "tr-wifi-management": "Wi-Fi-Verwaltung",
+    "tr-modem-support": "Modem-Unterstützung",
+    "tr-security-tools": "Sicherheitstools",
+    "tr-system-monitoring": "Systemüberwachung",
+    "tr-diagnostic-tools": "Netzwerk-Diagnosetools",
+    "tr-system-tools": "Systemverwaltungstools",
+    "tr-themes-dashboard": "Themes und Dashboard",
+    "tr-utilities": "Dienstprogramme",
+    "tr-usb-storage": "USB-Speicher-Unterstützung",
+    "tr-file-sharing": "Dateifreigabe",
+    "tr-dns-privacy": "DNS & Datenschutz",
+    
+    "tr-dnsmasq-settings": "DNS-Server-Optimierung",
+    "tr-dnsmasq-mode": "DNS-Server-Modus",
+    "tr-dnsmasq-auto": "Automatisch",
+    "tr-dnsmasq-manual": "Manuell",
+    "tr-dnsmasq-disabled": "Deaktiviert",
+    "tr-dnsmasq-cache": "Cache-Größe",
+    "tr-dnsmasq-negcache": "Negativ-Cache",
+    "tr-dnsmasq-auto-optimization": "Automatische Optimierung",
+    "tr-dnsmasq-optimization-disabled": "Optimierung deaktiviert",
+
+    "tr-feedback-link": "Forum",
+
+    "tr-tui-main-menu": "Hauptmenü",
+    "tr-tui-select": "Auswählen",
+    "tr-tui-back": "Zurück",
+    "tr-tui-exit": "Beenden",
+    "tr-tui-yes": "Ja",
+    "tr-tui-no": "Nein",
+    "tr-tui-ok": "OK",
+    "tr-tui-cancel": "Abbrechen",
+    "tr-tui-choice": "Auswahl",
+    
+    "tr-tui-view-device-info": "Geräteinformationen anzeigen",
+    "tr-tui-view-package-list": "Paketliste anzeigen",
+    "tr-tui-view-config-vars": "Konfigurationsvariablen anzeigen",
+    "tr-tui-view-postinst": "postinst.sh anzeigen",
+    "tr-tui-view-setup": "setup.sh anzeigen",
+    "tr-tui-review-configuration": "Konfiguration überprüfen & anwenden",
+    "tr-tui-apply": "Konfiguration anwenden",
+    "tr-tui-no-packages": "Keine Pakete ausgewählt",
+    "tr-tui-no-config-vars": "Keine Konfigurationsvariablen festgelegt",
+    "tr-tui-postinst-not-found": "postinst.sh-Datei nicht gefunden",
+    "tr-tui-setup-not-found": "setup.sh-Datei nicht gefunden",
+    "tr-tui-apply-confirm-title": "Folgende Vorgänge werden ausgeführt:",
+    "tr-tui-apply-confirm-step1": "1. Pakete über postinst.sh installieren",
+    "tr-tui-apply-confirm-step2": "2. Einstellungen über setup.sh anwenden",
+    "tr-tui-apply-confirm-step3": "3. Neustart (mit Bestätigung)",
+    "tr-tui-apply-confirm-question": "Jetzt ausführen?",
+    "tr-tui-installing-packages": "Pakete werden installiert",
+    "tr-tui-applying-config": "Systemkonfiguration wird angewendet",
+    "tr-tui-config-applied": "Konfiguration erfolgreich angewendet!",
+    "tr-tui-reboot-question": "Jetzt neu starten?",
+    "tr-tui-auto-config-applied": "Automatische Konfiguration angewendet!",
+    "tr-tui-use-auto-config": "Diese automatisch erkannte Konfiguration verwenden?",
+    
+    "tr-tui-space-toggle": "Leertaste=umschalten",
+    
+    "tr-tui-ui-mode-select": "UI-Modus auswählen:",
+    "tr-tui-ui-whiptail": "whiptail (dialogbasiertes TUI)",
+    "tr-tui-ui-simple": "simple (listenbasiertes TUI)",
+    "tr-tui-ui-choice": "Auswahl",
+    "tr-tui-ui-installing": "whiptail wird installiert",
+    "tr-tui-ui-install-success": "whiptail erfolgreich installiert!",
+    "tr-tui-ui-install-failed": "Installation fehlgeschlagen, einfacher Modus wird verwendet",
+    "tr-tui-gua": "GUA",
+    "tr-tui-pd": "PD"
 }
